--- a/index.html
+++ b/index.html
@@ -41,14 +41,7 @@ p {
   <img src="img_girl.jpeg" alt="Girl with a jacket">
   <br>
   <p style="color:black;" >
-  This ColdFusion class for Web developers, this course gives you an overview of ColdFusion's components and features as well as the skills you need to get up and running with the program. Learn to create awesome and high-powered applications in this ColdFusion course,<br> building upon your experience and existing familiarity with the Web. In addition to the in-person classroom instruction, this course includes a detailed ColdFusion training with real-time projects and live assessments throughout the course</p>
-
-This ColdFusion class for Web developers, this course gives you an overview of ColdFusion's components and features as well as the skills you need to get up and running with the program. Learn to create awesome and high-powered applications in this ColdFusion course,<br> building upon your experience and existing familiarity with the Web. In addition to the in-person classroom instruction, this course includes a detailed ColdFusion training with real-time projects and live assessments throughout the course
-
-This ColdFusion class is for Web designers who are new to ColdFusion. You will learn to process forms, write reusable code and create database-driven manage sessions, ColdFusion-based websites.
-
-Gain the knowledge and hands-on experience that you need to build, maintain, and scale effective web applications using Adobe ColdFusion in this course. Focusing on creating and delivering scalable and well-performing applications, you'll cover topics such as:</p>
-  </body>
+  This is test website  </body>
 </html>  
   
   
