--- a/index.html
+++ b/index.html
@@ -1,42 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
- <head>
- <meta charset=UTF-8>
- <title>Keiki Robotics</title>
- </head>
- <style>
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: white;
-  text-align: center;
-  Margin-top: 0px;  
-  Margin-bottom: 0px
-}
-
-h2 {
-  color: Red;
-  text-align: center;
-  Margin-top: -20px;
-}
-
-p {
-  Color: black;
-  font-family: verdana;
-  font-size: 20px;
-  Padding: 20px;
-}
- </style>
+<html>
+  <head>
+    <title>Hello World!</title>
+  </head>
   <body>
-  <h1 style= "font-size:150px; lightblue: 0.5"> Keiki Robotics</h1>
-<br/>
-  <h2 style= "font-size:50px; line-height: 0.5">Create Your Mind!</h2>
-	
-  <p></p>
-  
-  This is test website  </body>
-</html>  
-  
-  
+    <h1>Hello world! My first webpage!</h1>
+  </body>
+</html>
