--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Hello World!</title>
+    <style>
+      h1 {
+        background-color:blue;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello world! My first webpage!</h1>
+    <h1 style="background-color:red;">Hello world! My first webpage!</h1>
+    <h1> My second line!</h1>
   </body>
 </html>
